@@ -5,4 +5,5 @@
 /www/public/rdoc/
 /spec/iv-*.erb
 /spec/pid-*
+/spec/render_coverage
 Gemfile.lock
